--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 </head>
 <body>
     <h1>인덱스 페이지 입니다.</h1>
-    
+    <p>p1</p>
+
 </body>
 </html>
+
+<!-- .git 하나당 깃허브 저장공간 하나씩이다. 
+1 local = 1 remote
+
+git remote -v 리모트 저장소 
+
+push 
+오리진에다가 마스터 브런치를 올리겠다
+
+
+
+
+
+
+
+
+
+-->
