--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@ push
 
 깃허브에 push 한 후에 또 하나의 커밋을 하니까, 
 Your branch is ahead of 'origin/master' by 1 commit.
-앞섰다.
+나의 로컬 마스터가 오리진마스터(리모트의 마스터)를 앞섰다.
+
+그래서 git push origin master으로
+둘을 맞춘다
+
 
 로컬에는 원격 저장소의 마스터를 추적하는 브런치가 있다. 바로 origin/master
 origin/master은 원격 저장소의 master와 같이 간다(추적/트래킹한다)
@@ -47,5 +51,15 @@ fetch 하고 나면, 오리진/마스터가 마스터보다 ahead(앞선다)
 
 원격 저장소에 새로운 커밋을 올리는 것은 푸쉬(1)
 원격 저장소에서 새로운 커밋을 받아오는 것은 페치(2)+머지(3)
+
+원격 저장소의 커밋을 하나 두 번째 로컬로 받아오면 페치라고 한다.
+그렇게 받아온 오리진/마스터 브런치가 생긴거고, 두 번째 로컬 마스터와 머지를 해준다.
+그러면 합병이 되서 비로소 오리진/마스터와 마스터가 맞춰진다.
+
+git fetch origin 해서 받아온 후, status해보면
+로컬 마스터가 오리진/마스터보다 뒤지고 있다고 한다.
+(학원에는 p2가 있는데 집에는 아직 없다.)
+그래서 오리진/마스터를 기준으로 마스터를 머지하면 맞춰지는 것
+
 
 -->
