--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@ up to date with 맞췄다.
 git hub에 푸시한 것을 clone하면 상태를 그대로 내려받을 수 있다.(<-master <-origin/master)
 local repo 2 가 되는 것, 파일뿐만 아니라 커밋 전체를 복제한다. 그리고 수정해서 다시 푸쉬할 수 있다.
 
-git clone + https URL
-cd acorn 하면 바로 그 폴더 안으로 들어온 것
+1. git init
+2. git clone + https URL
+3. cd acorn 하면 바로 그 폴더 안으로 들어온 것
+
+git status해서 확인(local master와 remote의 오리진/마스터가 서로 커밋이 맞춰졌는지)
 
 
 local -> remote -> local 2
